[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[patch.crates-io]
reqwest = { git = "https://github.com/magurotuna/reqwest.git", branch = "refused-stream-retryable" }
