[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.10.1"
futures = "0.3.30"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
